<resources>
    <string name="app_name">MaterialTest</string>
    <string name="ic_backup">Backup</string>
    <string name="ic_delete">Delete</string>
    <string name="ic_settings">Settings</string>
    <string name="this_is_menu">This is menu</string>
    <string name="nav_call">Call</string>
    <string name="nav_friend">Friends</string>
    <string name="nav_location">Location</string>
    <string name="nav_mail">Mail</string>
    <string name="nav_task">Tasks</string>
    <string name="mail">qricis@163.com</string>
    <string name="username">Qricis Qi</string>
    <string name="this_is_a_pics">This is a pics</string>
</resources>